# pydantic-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: canary.yml  publish.yml  test.yml
src/pydantic_mcp/: __init__.py  toolkit.py
tests/: conftest.py  demo.py  test_tool.py
